--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -25,8 +25,9 @@
     align-items: center;
 }
 
-.crud-search {
+.crud-search-form {
     display: flex;
+    align-items: center;
 }
 
 .crud-search-input {
@@ -387,6 +388,48 @@ input:checked+.slider:before {
 
 .pagination-info {
     margin: 0 10px;
+}
+
+.pagination-pages a {
+    display: inline-block;
+    padding: 8px 12px;
+    margin: 0 4px;
+    text-decoration: none;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #333;
+    border-radius: 4px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination-pages a:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+.current-page {
+    display: inline-block;
+    padding: 8px 12px;
+    margin: 0 4px;
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #333;
+    border-radius: 4px;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+    .custom-pagination {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pagination-button,
+    .pagination-info,
+    .pagination-pages a,
+    .current-page {
+        margin: 5px 0;
+    }
 }
 
 
