--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -170,7 +170,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: red;
     -webkit-transition: .4s;
     transition: .4s;
     border-radius: 20px;
@@ -184,7 +184,7 @@
     left: 4px;
     bottom: 4px;
     border-radius: 50%;
-    background-color: white;
+    background: #fff;
     -webkit-transition: .4s;
     transition: .4s;
 }
